Skaffold/k8s/livedemo/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app01live
  labels:
    name: app01live
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: app01live
spec:
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: app
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app01live
spec:
  ports:
  - port: 8080
  type: NodePort
  selector:
    app: hello
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-app01live
  namespace: app01live
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-app01live
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: app01live-tls-credential
    hosts:
    - "app01live.127.0.0.1.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs-app01live
  namespace: app01live
spec:
  hosts:
  - "app01live.127.0.0.1.nip.io"
  gateways:
  - istio-gateway-app01live
  http:
  - name: 'app01-route'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: app
---
